License: wxWindows

Change Log:

#-----------------------------------------------------------------------------#
Changes since last release:

VERSION 0.x.xx
DATE 1x/xx/2008
16th Alpha Release

NEWS:


NEW: [features/improvements]
+Automatically expire status bar info messages after 10 seconds

BUG FIXES:
+Fix case where encoding can be None in when initializing the preference dialog

#-----------------------------------------------------------------------------#

VERSION 0.3.80
DATE 10/02/2008
15th Alpha Release

NEWS:
This release includes a number of major feature enhancements and bug fixes.
Most notably is the all new text searching and replacing feature. The entire
search backend was rewritten from scratch to to make a number of new searching,
replaceing, and file grepping features availble. Whole directories of files
can be grepped for matches, new convinient key shortcuts, and an improved ui
with a number of new configuration options are just the begining.

A large number of supported languages also now have improved auto-indent
support. Added support for some new programming languages, and much much, more.
See the below changelog for more details.

NEW: [features/improvements]
+New find/replace dialog
+Add Find All feature (Current Document, All open documents, in files)
+Add Replace All (Current Document, All open documents)
+Shortcut for Find Next (OSX: Cmd+G, Other: F3)
+Option to set prefered encoding to use when detecting/guessing fails
+Action for reloading file with a specified encoding
+New Syntax Highlighting Scheme 'BlackBoard'
+Improved auto-indent functionality for
    - ActionScript        - C              - CPP
    - CSS                 - C#             - D
    - Editra Style Sheets - Ferite         - Fortran 77
    - Fortran 95          - haXe           - Inno Setup Scripts
    - Java                - JavaScript     - Objective C
    - PHP                 - Pike           - Ruby
    - Squirrel            - TCL/Tk         - Vala